--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="icon" href="https://scontent.fbud4-1.fna.fbcdn.net/v/t1.15752-9/75307986_277608086457796_1920277846522068992_n.png?_nc_cat=101&_nc_oc=AQls0QNLdSNijE-liBpZxSh29MNTDxiOsopoSJoKHkIJxJtDZRlpbzgfmyt0toTlWT4&_nc_ht=scontent.fbud4-1.fna&oh=1e5c85db2ff1e80166b382efff380058&oe=5E8CD94A" type="image/png">
-  <title>BITcoinCryptoMiner_Licence.file</title>
+  <title>Certificate</title>
 </head>
 <body>
-<h2><img width="35" height="31" src="https://scontent.fhel5-1.fna.fbcdn.net/v/t1.15752-9/76689069_1082233845501931_501671490345762816_n.png?_nc_cat=105&_nc_ohc=63y9FiSfaEMAQmrJxuH-U5vcABorFC5iRmDCNjNJ8volYlInyUkMl1mzg&_nc_ht=scontent.fhel5-1.fna&oh=594f27cff1e1e27916b2830b96f74e50&oe=5E7B3EB8">Information about this licence<br>
-  <h2>What about this liccence:</h2>
+<h2><img style="vertical-align:middle;" width="35" height="31" src="https://scontent.fhel5-1.fna.fbcdn.net/v/t1.15752-9/76689069_1082233845501931_501671490345762816_n.png?_nc_cat=105&_nc_ohc=63y9FiSfaEMAQmrJxuH-U5vcABorFC5iRmDCNjNJ8volYlInyUkMl1mzg&_nc_ht=scontent.fhel5-1.fna&oh=594f27cff1e1e27916b2830b96f74e50&oe=5E7B3EB8">Certificate Information<br>
+  <hr style="width:95%; height:1px;">
+  <h2>This certificate is intended for the following purpose(s):</h2>
    <ul list-style-type="disc">
-     <li></li>
-     <li></li>
-     <li></li>
+     <li>Ensure the indentity of a remote computer</li>
+     <li>Proves your identity to a remote computer</li>
+     <li>xs</li>
    </ul>
   </h2>
 </body>
